<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lucid Dreamer</string>
    <string name="main_title">Lucid Dreamer Applications</string>
    <string name="main_alarm_label">Alarm Clock</string>
    <string name="main_reminder_label">Reality Check Reminder</string>
    <string name="main_journal_label">Dream Journal</string>
<string name="journal_title">Lucid Dreamer Journal</string>
<string name="journal_prev_label">&lt; Previous</string>
<string name="journal_next_label">Next &gt;</string>
</resources>
